# honknet-engine

./: .dockerignore  .env.production.example  .gitignore  BUILD_VERIFICATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_MATRIX.md  LICENSE  NOTICE  READABLE_SOURCE_BUILD.md  README.md  RELEASE_NOTES.md  REPOSITORY_SETUP_GUIDE.md  SECURITY.md  SOURCE_MANIFEST.json  SOURCE_MANIFEST.sha256  VERIFICATION.md  apply-to-existing-repo.sh  docker-compose.yml  engine.toml  package-lock.json  package.json  run-demo.sh  space-station-15_full_design_document.md  verify.ps1  verify.sh
apps/honknet-cli/: Cargo.toml
apps/honknet-cli/src/: main.rs
apps/honknet-client/: Cargo.toml  README.md
apps/honknet-client/src/: main.rs  shader.wgsl
apps/honknet-headless-client/: Cargo.toml
apps/honknet-headless-client/src/: main.rs
apps/honknet-server/: Cargo.toml
apps/honknet-server/src/: main.rs
apps/honknet-web/: Cargo.toml  index.html  package.json  tsconfig.json
apps/honknet-web/pkg/: honknet_web.d.ts  honknet_web.js  honknet_web_bg.wasm  honknet_web_bg.wasm.d.ts
apps/honknet-web/src/: index.ts  lib.rs
apps/honknet-web/src/bridge/: RenderFrameDecoder.ts  TransportBridge.ts  WasmBridge.ts
apps/honknet-web/src/input/: BrowserInputAdapter.ts  InputActionMap.ts  InputContextStack.ts  KeyboardState.ts  MouseState.ts
apps/honknet-web/src/render/: ChunkRenderer.ts  DeviceRecovery.ts  PixiApplication.ts  RenderLoop.ts  RendererCapabilities.ts  ResizeManager.ts  RsiSpriteRenderer.ts
apps/honknet-web/src/render/camera/: CameraController.ts  CameraTransform.ts
apps/honknet-web/src/render/entity/: EntityDisplayPool.ts  SpriteLayerDisplay.ts  (+2 more)
apps/server/: Cargo.toml
apps/server/src/: app_state.rs  auth.rs  client_session.rs  components.rs  config.rs  debug_world.rs  game_map.rs  health.rs  main.rs  metrics.rs  outbound.rs  prototypes.rs  server_state.rs  systems.rs  tick_loop.rs  transport.rs
crates/honknet-auth/: Cargo.toml
crates/honknet-auth/src/: lib.rs
crates/honknet-client-runtime/: Cargo.toml
crates/honknet-client-runtime/src/: lib.rs
crates/honknet-ecs/: Cargo.toml
crates/honknet-ecs/src/: lib.rs
crates/honknet-net-browser/: Cargo.toml
crates/honknet-net-browser/src/: lib.rs
crates/honknet-net-core/: Cargo.toml
crates/honknet-net-core/src/: lib.rs
crates/honknet-net-transport/: Cargo.toml
crates/honknet-net-transport/src/: lib.rs
crates/honknet-persistence/: Cargo.toml
crates/honknet-persistence/src/: lib.rs
crates/honknet-physics/: Cargo.toml
crates/honknet-physics/src/: lib.rs
crates/honknet-prototypes/: Cargo.toml
crates/honknet-prototypes/src/: lib.rs
crates/honknet-replication/: Cargo.toml
crates/honknet-replication/src/: lib.rs
crates/honknet-resources/: Cargo.toml
crates/honknet-resources/src/: lib.rs
crates/honknet-runtime/: Cargo.toml
crates/honknet-runtime/src/: lib.rs
crates/honknet-script/: Cargo.toml
crates/honknet-script/src/: lib.rs
crates/honknet-sdk/: Cargo.toml
crates/honknet-sdk/src/: lib.rs
crates/honknet-studio-core/: Cargo.toml
crates/honknet-studio-core/src/: lib.rs
crates/honknet-studio-project/: Cargo.toml
crates/honknet-studio-project/src/: lib.rs
crates/honknet-testing/: Cargo.toml
crates/honknet-testing/src/: lib.rs
game/: Cargo.toml  project.toml
game/content/maps/: tgstation_alpha.yml
game/content/prototypes/items/: clothing.yml  medical.yml  security.yml  toolbox.yml  tools.yml
game/content/prototypes/mobs/: human.yml
game/empty-module/: README.md  game.toml
game/empty-module/client/src/: index.ts
game/empty-module/content/prototypes/: base.yml
game/empty-module/server/src/: index.ts
game/empty-module/shared/src/: index.ts
game/example-module/: game.toml
game/example-module/client/: package.json
game/example-module/client/src/: index.ts
game/example-module/content/behaviors/: example-door.hgraph.yml
game/example-module/content/prototypes/: base.yml  entities.yml
game/example-module/content/ui/: example-status.hui.yml
game/example-module/localization/en-US/: entities.ftl
game/example-module/localization/ru-RU/: entities.ftl
game/example-module/maps/: debug-map.yml
game/example-module/server/: package.json
game/example-module/shared/: package.json
game/scripts/: package.json  tsconfig.json
game/scripts/src/: game.ts
game/src/: Cargo.toml  lib.rs  round.rs
game/src/components/: mod.rs
game/src/components/access/: access_reader.rs  id_card.rs  mod.rs
game/src/components/atmos/: gas.rs  mod.rs  pipe.rs  tile_atmos.rs  topology.rs
game/src/components/chemistry/: dispenser.rs  holder.rs  mod.rs  reagent.rs
game/src/components/combat/: intent.rs  mod.rs  weapon.rs
game/src/components/containers/: container.rs
game/src/components/doors/: bolt.rs  door.rs  mod.rs  pressure.rs
game/src/components/hands/: hands.rs  item.rs  mod.rs
game/src/components/health/: body.rs  health.rs  mob_state.rs  mod.rs  surgery.rs  target_zone.rs
game/src/components/interaction/: do_after.rs  examine.rs  interaction.rs  mod.rs  physical.rs  reach.rs
game/src/components/inventory/: inventory.rs  mod.rs  slots.rs
game/src/components/power/: apc.rs  cable.rs  mod.rs  network.rs  powered.rs  smes.rs
game/src/components/tools/: tool.rs
game/src/systems/: mod.rs
game/src/systems/access/: access_system.rs  mod.rs
game/src/systems/atmos/: atmos_system.rs  mod.rs
game/src/systems/chemistry/: chemistry_system.rs  mod.rs
game/src/systems/combat/: combat_system.rs  mod.rs
game/src/systems/containers/: container_system.rs  mod.rs
game/src/systems/doors/: door_system.rs  mod.rs
game/src/systems/hands/: drop_system.rs  mod.rs  pickup_system.rs
game/src/systems/health/: health_system.rs  mod.rs  surgery_system.rs
game/src/systems/interaction/: examine_system.rs  interaction_system.rs  mod.rs  physical_system.rs
game/src/systems/inventory/: equip_system.rs  mod.rs  unequip_system.rs
game/src/systems/power/: mod.rs  power_grid_system.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
(+236 files in other folders)
