[package]
name = "honknet-game"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
honknet-core = { path = "../crates/honknet-core" }
honknet-ecs = { path = "../crates/honknet-ecs" }
honknet-events = { path = "../crates/honknet-events" }
honknet-math = { path = "../crates/honknet-math" }
honknet-map = { path = "../crates/honknet-map" }
honknet-physics = { path = "../crates/honknet-physics" }
honknet-net-core = { path = "../crates/honknet-net-core" }
honknet-replication = { path = "../crates/honknet-replication" }
honknet-prototypes = { path = "../crates/honknet-prototypes" }
honknet-runtime = { path = "../crates/honknet-runtime" }
honknet-scheduler = { path = "../crates/honknet-scheduler" }
honknet-script = { path = "../crates/honknet-script" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
