[package]
name="honknet-integration-tests"
version.workspace=true
edition.workspace=true
license.workspace=true
[dependencies]
honknet-testing={path="../crates/honknet-testing"}
honknet-map={path="../crates/honknet-map"}
honknet-core={path="../crates/honknet-core"}
honknet-math={path="../crates/honknet-math"}
tokio.workspace=true
