[package]
name="honk"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true

honknet-replay = { path = "../../crates/honknet-replay" }
