[package]
name="honknet-server"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
bincode.workspace = true
honknet-core = { path = "../../crates/honknet-core" }
honknet-ecs = { path = "../../crates/honknet-ecs" }
honknet-math = { path = "../../crates/honknet-math" }
honknet-physics = { path = "../../crates/honknet-physics" }
honknet-net-core = { path = "../../crates/honknet-net-core" }
honknet-net-transport = { path = "../../crates/honknet-net-transport" }
honknet-replication = { path = "../../crates/honknet-replication" }
honknet-persistence = { path = "../../crates/honknet-persistence" }
honknet-observability = { path = "../../crates/honknet-observability" }

