[package]
name="honknet-web"
version.workspace=true
edition.workspace=true
license.workspace=true

[lib]
crate-type=["cdylib","rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement","CanvasRenderingContext2d","WebSocket","MessageEvent","BinaryType"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

