[package]
name = "ss15-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
ss15-core = { path = "../../crates/ss15-core" }
ss15-protocol = { path = "../../crates/ss15-protocol" }
