[package]
name = "honknet-server"
version = "0.2.0-rc.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
uuid.workspace = true
honknet-core = { path = "../../crates/honknet-core" }
honknet-protocol = { path = "../../crates/honknet-protocol" }
honknet-script = { path = "../../crates/honknet-script" }
honknet-content = { path = "../../crates/honknet-content" }
honknet-persistence = { path = "../../crates/honknet-persistence" }
