[package]
name="honknet-auth"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
reqwest.workspace = true

