[package]
name = "honknet-client-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
honknet-core = { path = "../honknet-core" }
honknet-ecs = { path = "../honknet-ecs" }
honknet-math = { path = "../honknet-math" }
honknet-net-core = { path = "../honknet-net-core" }
honknet-prediction = { path = "../honknet-prediction" }
honknet-replication = { path = "../honknet-replication" }
