[package]
name = "honknet-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
honknet-core = { path = "../honknet-core" }
honknet-events = { path = "../honknet-events" }
honknet-reflection = { path = "../honknet-reflection" }
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true

