[package]
name = "honknet-net-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
honknet-net-core = { path = "../honknet-net-core" }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "BinaryType", "ErrorEvent", "CloseEvent"] }
