[package]
name="honknet-prototypes"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
honknet-resources = { path = "../honknet-resources" }
serde.workspace = true
serde_yaml.workspace = true
notify.workspace = true
parking_lot.workspace = true
thiserror.workspace = true

