[package]
name="honknet-replication"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
honknet-core = { path = "../honknet-core" }
honknet-math = { path = "../honknet-math" }
honknet-net-core = { path = "../honknet-net-core" }
honknet-serialization = { path = "../honknet-serialization" }
serde.workspace = true
bincode.workspace = true
rayon.workspace = true

