[package]
name="honknet-resources"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
zip.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
walkdir.workspace = true
thiserror.workspace = true

