[package]
name="honknet-sdk"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
honknet-core = { path = "../honknet-core" }
honknet-ecs = { path = "../honknet-ecs" }
honknet-events = { path = "../honknet-events" }
honknet-math = { path = "../honknet-math" }
honknet-map = { path = "../honknet-map" }
honknet-physics = { path = "../honknet-physics" }
honknet-net-core = { path = "../honknet-net-core" }
honknet-replication = { path = "../honknet-replication" }
honknet-ui = { path = "../honknet-ui" }
honknet-macros = { path = "../honknet-macros" }
serde.workspace = true

