[package]
name = "honknet-studio-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
honknet-studio-protocol = { path = "../honknet-studio-protocol" }
